--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,6 @@ python:
  - "nightly"
 install:
  - "pip install pytest"
+ - "pip install pytest-bdd"
  - "pip install -r requirements.txt"
 script: pytest
